src/objects/Plastic_card__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <summarizedField>Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bank_account__c</fullName>
        <label>Bank account</label>
        <referenceTo>Bank_account__c</referenceTo>
        <relationshipLabel>Plastic cards</relationshipLabel>
        <relationshipName>Plastic_cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Card_end_date__c</fullName>
        <defaultValue>TODAY() + 1095</defaultValue>
        <label>Card end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_balance_status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <label>Credit balance status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_debt_repayment__c</fullName>
        <formula>DATE (YEAR (TODAY ()), MONTH (TODAY ()) + 1, 1) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of debt repayment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_payable_amount__c</fullName>
        <formula>Requested_Balance__c * 0.05</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest payable, amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mailing_to_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailing to email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replenishment_per_month__c</fullName>
        <formula>Balance__c * 0.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replenishment per month</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Requested Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_card__c</fullName>
        <label>Type of card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>cards without digital media</fullName>
                </value>
                <value>
                    <fullName>cards with bar-code</fullName>
                </value>
                <value>
                    <fullName>cards with a magnetic strip</fullName>
                </value>
                <value>
                    <fullName>smart cards</fullName>
                </value>
                <value>
                    <fullName>contact cards</fullName>
                </value>
                <value>
                    <fullName>magnetic-chip cards,</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Plastic card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Bank_account__c</columns>
        <columns>Card_end_date__c</columns>
        <columns>Type_of_card__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Plastic card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plastic cards</pluralLabel>
    <recordTypes>
        <fullName>Credit_Card_Record_Type</fullName>
        <active>true</active>
        <label>Credit Card Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Debit_Card_Record_Type</fullName>
        <active>true</active>
        <label>Debit Card Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Plactic_Card_Record_Type</fullName>
        <active>true</active>
        <label>Plactic Card Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>